[package]
name = "use-base64"
description = "Practical Base64 helpers for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["base64", "encoding", "url", "bytes"]
categories = ["encoding", "text-processing"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
