[package]
name = "use-hex"
description = "Hexadecimal formatting and decoding helpers for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["hex", "encoding", "bytes", "color"]
categories = ["encoding", "text-processing"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true