[package]
name = "use-utf8"
description = "UTF-8 validation and truncation helpers for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["utf8", "unicode", "text", "bytes"]
categories = ["encoding", "text-processing"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true